--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+    - name: Build Examples
+      run: cargo build --verbose --examples
   test:
     runs-on: ubuntu-latest
     steps:
